--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.1.1",
+    "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.39.3",
     "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
