--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
+    "@google/genai": "^0.1.1",
     "@supabase/supabase-js": "^2.39.3",
-    "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
     "pptxgenjs": "^3.12.0",
     "react": "^18.2.0",
