--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "6.22.3",
-    "@google/genai": "^1.30.0",
-    "lucide-react": "^0.554.0",
-    "recharts": "^3.5.0",
+    "@google/genai": "1.30.0",
+    "lucide-react": "0.454.0",
+    "recharts": "2.12.7",
     "jszip": "3.10.1",
     "pptxgenjs": "3.12.0",
     "@supabase/supabase-js": "2.39.3"
